--- a/src/templates/twoToTenResponse.hbs
+++ b/src/templates/twoToTenResponse.hbs
@@ -1,5 +1,5 @@
 <ul class="list">
     {{#each this}}
-    <li class="list-item">{{name}}</li>
+    <li class="list-item twoTenItem">{{name}}</li>
     {{/each}}
 </ul>
